# koa-ml

./: .gitignore  .koa-config.example.yaml  README.md  TESTING.md  pyproject.toml  pytest.ini
docs/: ML_GUIDE.md  QUICKSTART.md  QWEN3_GUIDE.md  QWEN3_QUICKREF.md
eval/: README.md  evaluate.py  qwen3_vl_eval.py
eval/configs/: quickstart.yaml  qwen3_8b_full_eval.yaml  qwen3_quickstart.yaml  qwen3_vl_30b_a3b_instruct_m2sv.yaml  qwen3_vl_30b_a3b_thinking_m2sv.yaml  qwen3_vl_8b_instruct_m2sv.yaml  qwen3_vl_8b_thinking_m2sv.yaml  qwen3_vl_m2sv.yaml
eval/configs/benchmarks/: arc.yaml  gsm8k.yaml  hellaswag.yaml  mmlu.yaml  truthfulqa.yaml
jobs/: eval_mmlu.slurm  eval_quickstart.slurm  eval_qwen3_8b_full.slurm  eval_qwen3_quickstart.slurm  eval_qwen3_vl_30b_a3b_instruct_m2sv.slurm  eval_qwen3_vl_30b_a3b_thinking_m2sv.slurm  eval_qwen3_vl_8b_instruct_m2sv.slurm  eval_qwen3_vl_8b_thinking_m2sv.slurm  eval_qwen3_vl_m2sv.slurm  example_job.slurm  example_long_job.slurm  tune_llama8b_lora.slurm  tune_llama8b_qlora.slurm  tune_qwen3_0.6b_quickstart.slurm  tune_qwen3_14b_qlora.slurm  tune_qwen3_4b_lora.slurm  tune_qwen3_8b_lora.slurm  tune_qwen3_8b_qlora.slurm  tune_smollm_quickstart.slurm
scripts/: run_vllm_server.sh  setup_koa_env.sh
src/koa_ml/: __init__.py  __main__.py  config.py  slurm.py  ssh.py
tests/: __init__.py  test_config.py  test_integration.py  test_slurm.py  test_ssh.py
tune/: README.md  train.py
tune/configs/models/: llama_8b_full.yaml  llama_8b_lora.yaml  llama_8b_qlora.yaml  qwen3_0.6b_lora.yaml  qwen3_14b_qlora.yaml  qwen3_4b_lora.yaml  qwen3_8b_lora.yaml  qwen3_8b_qlora.yaml  smollm_135m_lora.yaml
