[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koa-ml"
version = "0.1.0"
description = "Utilities for interacting with the KOA HPC cluster from a local workstation."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
  {name = "Michael Buriek"}
]
dependencies = [
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pytest>=7.0",
  "pytest-mock>=3.10",
]

# Training dependencies
train = [
  "torch>=2.3.0",
  "transformers>=4.40.0",
  "accelerate>=0.28.0",
  "peft>=0.11.1",
  "trl>=0.9.6",
  "datasets>=2.18.0",
  "bitsandbytes>=0.42.0; platform_system == \"Linux\"",
  "flash-attn>=2.5.6; platform_system == \"Linux\"",
  "wandb>=0.16.0",
  "pandas>=2.0.0",
  "pillow>=10.0.0",
  "torchvision>=0.20.1",
  "tqdm>=4.65.0",
]

# Evaluation dependencies
eval = [
  "torch>=2.3.0",
  "transformers>=4.40.0",
  "accelerate>=0.28.0",
  "lm-eval[wandb]>=0.4.2",
  "datasets>=2.18.0",
  "pandas>=2.0.0",
  "pillow>=10.0.0",
  "torchvision>=0.20.1",
  "tqdm>=4.65.0",
  "httpx>=0.27.0",
]

# All ML dependencies (train + eval)
ml = [
  "torch>=2.3.0",
  "transformers>=4.40.0",
  "accelerate>=0.28.0",
  "peft>=0.11.1",
  "trl>=0.9.6",
  "datasets>=2.18.0",
  "bitsandbytes>=0.42.0; platform_system == \"Linux\"",
  "flash-attn>=2.5.6; platform_system == \"Linux\"",
  "lm-eval[wandb]>=0.4.2",
  "wandb>=0.16.0",
  "pandas>=2.0.0",
  "pillow>=10.0.0",
  "torchvision>=0.20.1",
  "tqdm>=4.65.0",
  "httpx>=0.27.0",
]

[project.scripts]
koa-ml = "koa_ml.__main__:main"
koa_ml = "koa_ml.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
